// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> behaviour tests is false after two clicks 1`] = `
<div
  className="GUIMSwitch Checked"
>
  <input
    checked={true}
    className="Switch GUIMSwitchBlue"
    disabled={false}
    id="switch-00-0"
    name="checkbox"
    onChange={[Function]}
    style={Object {}}
    type="checkbox"
  />
  <label
    htmlFor="switch-00-0"
  >
    .
  </label>
</div>
`;

exports[`<Checkbox /> behaviour tests match snapshot 1`] = `
<div
  className="GUIMSwitch "
>
  <input
    checked={false}
    className="Switch GUIMSwitchBlue"
    disabled={false}
    id="switch-00-0"
    name="checkbox"
    onChange={[Function]}
    style={Object {}}
    type="checkbox"
  />
  <label
    htmlFor="switch-00-0"
  >
    .
  </label>
</div>
`;

exports[`<Checkbox /> disabled behaviour tests match snapshot 1`] = `
<input
  checked={false}
  className="GUIMCheckbox  GUIMCheckboxBlue"
  disabled={true}
  id="switch-00-1"
  name="checkbox"
  onChange={[Function]}
  style={Object {}}
  type="checkbox"
/>
`;
